--- a/us-2022-reuters-map-style.css
+++ b/us-2022-reuters-map-style.css
@@ -31,7 +31,7 @@ div.map.flex-child {
   width: 100% !important;
 }
 
-div.office-body-container-senate {
+div.office-body-container {
   overflow: hidden;
 }
 /*
