--- a/us-2022-reuters-map-style-v8.css
+++ b/us-2022-reuters-map-style-v8.css
@@ -41,7 +41,7 @@ div.table.flex-child {
     margin: auto;
   }
 
-  div.state-map-container {
+  div.map-layout-navigation {
     bottom: 0px;
     position: absolute;
   }
