--- a/us-2022-reuters-map-style-v9.css
+++ b/us-2022-reuters-map-style-v9.css
@@ -37,7 +37,7 @@ div.table.flex-child {
   }
   
   div.office-body-container {
-    width: 1080px;
+    /* width: 900px; */
     margin: auto;
   }
 
