--- a/us-2022-reuters-map-style-v10.css
+++ b/us-2022-reuters-map-style-v10.css
@@ -32,6 +32,10 @@ div.table.flex-child {
     width: 0% !important;
   }
 
+  div.special-elex-title {
+    display: none !important;
+  }
+
   div.map.flex-child {
     width: 100% !important;
   }
