--- a/us-2022-reuters-map-style-v11.css
+++ b/us-2022-reuters-map-style-v11.css
@@ -32,7 +32,7 @@ div.table.flex-child {
     width: 0% !important;
   }
 
-  div.special-elex-title {
+  .special-elex-title {
     display: none !important;
   }
 
