--- a/us-2022-reuters-map-style-v14.css
+++ b/us-2022-reuters-map-style-v14.css
@@ -45,7 +45,7 @@ div.table.flex-child {
     border-bottom: none !important;
   }
   div.office-body-container:last-child {
-    visibility: false !important;
+    visibility: hidden !important;
   }
   div.map-layout-navigation {
     visibility: hidden !important;
