update again (final final??)

--- a/us-2022-reuters-map-style-special.css
+++ b/us-2022-reuters-map-style-special.css
@@ -45,7 +45,7 @@ div.table.flex-child {
     border-bottom: none !important;
   }
   div.office-body-container:first-child {
-    visibility: hidden !important;
+    display: none !important;
   }
   div.map-layout-navigation {
     visibility: hidden !important;
