--- a/us-2022-reuters-map-style-standard-final.css
+++ b/us-2022-reuters-map-style-standard-final.css
@@ -49,6 +49,8 @@ div.table.flex-child {
   }
   div.map-layout-navigation {
     visibility: hidden !important;
+    bottom: 0%;
+    position: absolute;
   }
 
   div.zoom-carto-controls {
