--- a/us-2022-reuters-map-style-standard-final-8.css
+++ b/us-2022-reuters-map-style-standard-final-8.css
@@ -44,8 +44,8 @@ div.table.flex-child {
     margin: auto;
     border-bottom: none !important;
   }
-  div.office-body-container:first-child {
-    display: none !important;
+  div.office-body-container:nth-child(2) {
+    visibility: hidden !important;
   }
   div.map-layout-navigation {
     visibility: hidden !important;
@@ -56,6 +56,11 @@ div.table.flex-child {
   div.zoom-carto-controls {
     visibility: hidden !important;
   }
+
+  .spinner-container{
+    background-color:rgba(176, 178, 180, 0) !important;
+  }
+    
 /* ********************* */
 
 body {
