--- a/us-2022-reuters-map-style-standard-final-10.css
+++ b/us-2022-reuters-map-style-standard-final-10.css
@@ -57,10 +57,10 @@ div.table.flex-child {
     visibility: hidden !important;
   }
 
-  .spinner-container{
-    background-color:rgba(176, 178, 180, 0) !important;
+  .spinner-container .spinner {
     display: none !important;
   }
+  
     
 /* ********************* */
 
